--- a/src/components/Dialogs/MessagesSection/MessageCreation/MessageCreation.module.css
+++ b/src/components/Dialogs/MessagesSection/MessageCreation/MessageCreation.module.css
@@ -1,16 +1,13 @@
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  margin-bottom: 20px;
+  /* background-color: blue; */
+  padding: 10px 0;
 }
-.text {
+.message {
   width: 100%;
-  resize: none;
   box-sizing: border-box;
-  margin-bottom: 10px;
+  resize: none;
+  border-radius: 20px;
 }
-
 .btn {
   box-sizing: border-box;
   padding: 5px 15px;
